# license-checker

./: .gitignore  CONTRIBUTING.md  Cargo.toml  README.md  authorized_keys  rust-toolchain
licenses/: BSD-3-Clause  MIT  Unlicense
src/: check.rs  discover.rs  license.rs  licensed.rs  list.rs  mod.rs  options.rs  query.rs
