[package]
name = "volt-license-checker"
version = "0.0.1"
edition = "2021"
authors = [
    "Tejas Ravishankar <xtremedevx@gmail.com>",
    "Andrew Nijmeh <git@nijmeh.xyz>",    
]

repository = "https://github.com/voltpkg/license-checker"

description = "Volt's license checker"

readme = "README.md"

keywords = ["licensing", "cargo"]

[dependencies]
async-trait = "0.1.51"
base64 = "0.13.0"
bytes = "1.1.0"
treeify = "0.1.4" 
node-semver = "2.0.0"
clap = { version = "2.33.0", default-features = false, features = ["color", "suggestions"] }
regex = { version = "1.3.4", default-features = false }
itertools = { version = "0.8.2", default-features = false, features = ["use_std"] }
cargo_metadata = { version = "0.9.1", default-features = false }
anyhow = { version = "1.0.26", default-features = false, features = ["std"] }
pretty_env_logger = { version = "0.4.0", default-features = false }
log = { version = "0.4.8", default-features = false }
toml = { version = "0.5.6", default-features = false }
serde = { version = "1.0.104", default-features = false, features = ["derive"] }